chore: update Go version and dependencies, refactor server and source main files for improved structure

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,21 +2,11 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "Run Audio Streamer",
+      "name": "Start Server",
       "type": "go",
       "request": "launch",
       "mode": "auto",
-      "program": "${workspaceFolder}/cmd/source/main.go",
-      "args": [
-        "-file",
-        "music.mp3",
-        "-url",
-        "http://localhost:8001/source",
-        "-user",
-        "sourceuser",
-        "-pass",
-        "sourcepass"
-      ],
+      "program": "${workspaceFolder}/cmd/server/main.go",
       "env": {},
       "cwd": "${workspaceFolder}"
     }
